--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,25 @@
   --subtle-to: hsl(246 80% 25% / 0.4); /* Slightly more opaque */
 }
 
+@media screen and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+
+  body {
+    width: 100vh;
+    height: 100vw;
+    overflow-x: hidden;
+  }
+}
+
 @layer base {
   :root {
     --background: 246 30% 98%;
